# voice-agents

./: .gitignore  Architecture.md  CLAUDE.md
langchain-assembly-11labs-pipeline/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
langchain-assembly-11labs-pipeline/docs/: austin_trip.md
langchain-assembly-11labs-pipeline/src/: agent.py  assemblyai_stt.py  elevenlabs_tts.py  events.py  pipeline.py  server.py  utils.py
langchain-assembly-11labs-pipeline/src/static/: index.html
